# NLP_notes

./: .gitignore  README.md  main.py  nlp_API_gen_ai.ipynb  nlp_gen_ai.ipynb  nlp_gen_ai_no_hf.ipynb  nlp_local_gen_ai.ipynb  nlp_sentiment.ipynb  nlp_topics.ipynb  nlp_vecs.ipynb  pyproject.toml  run_jupyter.bash
