[project]
name = "nlp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "spacy>=3.8.4",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.50.2",
    "umap-learn>=0.5.7",
]
