[project]
name = "nlp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.0.2",
    "openai>=1.65.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "pysentimiento>=0.7.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spacy>=3.8.4",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tensorflow-text>=2.18.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "umap-learn>=0.5.7",
]
